--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         </div>
       </div>
     </nav>
+    <footer class="row">
+      <div class="col">
+        <h2 class="d-flex justify-content-center">Franco Crack</h2>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
